--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site
 title:              DDong
-bio:                "DDong's blog"
+bio:                'DDong blog'
 description:        "learning path"
 reading_time:       true
 words_per_minute:   200
